--- a/07-Relaxation/source.tex
+++ b/07-Relaxation/source.tex
@@ -289,7 +289,7 @@ La suite des BMUs temporaires utilisés en entrées contextuelles des autres car
 Ici $\pm$ représente la direction de déplacement des $\bmu_\tau$ et correspond au signe de $\hat{p}\m{i}_\tau - \bmu\m{i}_\tau$ (voir l'équation \ref{eq:evolution}).
 
 
-$\hat{p}\m{1}$ dépend seulement de l'entrée contextuelle $\gamma\{1}$, c'est-à-dire une position $p\m{2} \in [0,1]$, et inversement.
+$\hat{p}\m{1}$ dépend seulement de l'entrée contextuelle $\gamma\m{1}$, c'est-à-dire une position $p\m{2} \in [0,1]$, et inversement.
 Les points de convergence possibles pour la relaxation sont les points fixes de $\mathbf{f}$ définie en \ref{sec:formulation_suite}. Il s'agit des valeurs pour lesquels $p\m{1} = \hat{p}\m{1}$ et $p\m{2} = \hat{p}\m{2}$, soit les valeurs nulles du champ~:
 \begin{equation} 
 	\mathbf{g}:\: (p\m{1}, p\m{2}) \rightarrow (\lvert \hat{p}\m{1} - p\m{1} \rvert,  \lvert \hat{p}\m{2} - p\m{2} \rvert)
