--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -77,7 +77,7 @@ Lors de cette thèse, nous avons défini une méthode d'analyse de la réponse d
 Les perspectives à court terme de ces travaux sont de continuer le développement du modèle en s'intéressant aux connexions au sein d'une architecture comportant plus de deux et trois cartes.
 Le nombre de connexions possible au sein d'une architecture comportant un nombre fixé de cartes croît exponentiellement avec le nombre de cartes et chaque configuration de connexions peut complètement modifier la façon dont se comporte l'architecture. Par ailleurs, certaines cartes peuvent ou non prendre des entrées externes, ajoutant un grand nombre de configurations possibles à explorer.
 Grâce à nos travaux, nous avons pu identifier les paramètres importants à utiliser dans l'architecture et les caractéristiques des cartes pertinentes à considérer pour étudier les comportements d'apprentissage de relations multimodales. L'étude de plus grandes architectures devra se faire d'un point de vue plus global, en s'appuyant sur le comportement général de l'architecture et non seulement d'un point de vue d'une carte. 
-Non des moindres, les travaux d'analyse du comportement des architectures dont nous présentons ici les résultats ont été accompagnés d'un travail d'élaboration, en collaboration avec Hervé, d'une librairie C++ et python permettant la gestion des nombreuses variables d'état qui composent une architecture de cartes. Cette librairie est maintenue par Hervé Frezza-Buet \footnote{\href{https://github.com/HerveFrezza-Buet/cxsom}}. La mise en relation de nombreuses cartes est en effet 
+Non des moindres, les travaux d'analyse du comportement des architectures dont nous présentons ici les résultats ont été accompagnés d'un travail d'élaboration, en collaboration avec Hervé, d'une librairie C++ et python permettant la gestion des nombreuses variables d'état qui composent une architecture de cartes. Cette librairie est maintenue par Hervé Frezza-Buet \footnote{\url{https://github.com/HerveFrezza-Buet/cxsom}}. La mise en relation de nombreuses cartes est en effet 
 
 
 Il reste également à définir des cas d'études sur lesquels appliquer ces architectures à grande échelle.
