--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,4 +1,6 @@
-\ThesisTitle{Vers une architecture non-hiérarchique de cartes auto-organisatrices~: modèle et méthodes d'analyse}
+\ThesisTitle{CxSOM~: vers une architecture non-hiérarchique de cartes auto-organisatrices}
+\ThesisSubtitle{Méthodes et outils d'analyse}
+
 \ThesisDate{ 13 juin 2023}
 \ThesisAuthor{Noémie Gonnier}
 \ThesisUL
